[gd_scene load_steps=8 format=4 uid="uid://mel3m8hxjkn7"]

[ext_resource type="Script" uid="uid://bwokaw21xgehg" path="res://Levels/Hideout.gd" id="1_8oxr4"]
[ext_resource type="PackedScene" uid="uid://bqep4lh77amxw" path="res://Player/PlayerScene.tscn" id="2_gfc8j"]
[ext_resource type="Texture2D" uid="uid://cg4hlay7ifynb" path="res://assets/Tileset3.png" id="3_udjjl"]
[ext_resource type="PackedScene" uid="uid://gyisqiqdj8h6" path="res://UserInterface/DialogueBox.tscn" id="5_gfc8j"]
[ext_resource type="PackedScene" uid="uid://dk4o3f64bpeaj" path="res://Interactables/RescuedVillager/RescuedVillager.tscn" id="5_pchpa"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m5pg5"]
texture = ExtResource("3_udjjl")
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:6/0 = 0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:7/0 = 0
13:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 0, 8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.179857, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -0.359716, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.359718, -8, 8, 8, 8)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -7.07302, -6.86499, 8, 8, 8)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, -8, 8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 0.359718, 8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.359716, -8, 8, 8, 8, 8, -8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -0.179857)
11:9/0 = 0
11:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, -8, 8, 8, 8)
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:10/0 = 0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:10/0 = 0
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:10/0 = 0
11:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:10/0 = 0
12:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:11/0 = 0
5:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:11/0 = 0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:11/0 = 0
10:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:11/0 = 0
11:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:11/0 = 0
12:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:11/0 = 0
13:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:11/0 = 0
15:11/0 = 0
15:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:12/0 = 0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:12/0 = 0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:12/0 = 0
2:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:12/0 = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:12/0 = 0
4:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:12/0 = 0
5:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:12/0 = 0
6:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:12/0 = 0
8:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:12/0 = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:12/0 = 0
10:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:12/0 = 0
11:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:12/0 = 0
12:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:12/0 = 0
13:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:12/0 = 0
14:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:12/0 = 0
0:13/0 = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:13/0 = 0
1:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:13/0 = 0
2:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:13/0 = 0
3:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:13/0 = 0
4:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:13/0 = 0
5:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:13/0 = 0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:13/0 = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:13/0 = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:13/0 = 0
10:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:13/0 = 0
11:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:13/0 = 0
12:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:13/0 = 0
13:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:13/0 = 0
14:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:13/0 = 0
15:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:14/0 = 0
1:14/0 = 0
1:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:14/0 = 0
2:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
6:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:14/0 = 0
7:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:14/0 = 0
8:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:14/0 = 0
9:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
12:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:14/0 = 0
13:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:14/0 = 0
14:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:14/0 = 0
15:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:15/0 = 0
2:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
12:15/0 = 0
12:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.359716, -8, 0.539576, 8, 8, 8, 8, -8)
13:15/0 = 0
13:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.251717, -8, -0.419527, 8, -8, 8)
14:15/0 = 0
14:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:15/0 = 0
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_0vrxt"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_m5pg5")

[node name="Node2D" type="Node2D"]
position = Vector2(56, -17)

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_8oxr4")
metadata/_edit_use_anchors_ = true

[node name="GoldLabel" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 872.0
offset_top = 544.0
offset_right = 1001.0
offset_bottom = 567.0

[node name="ArcherLabel" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 944.0
offset_top = 504.0
offset_right = 984.0
offset_bottom = 527.0

[node name="VillagerLabel" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 848.0
offset_top = 504.0
offset_right = 888.0
offset_bottom = 527.0

[node name="TrainArcherButton" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 816.0
offset_top = 456.0
offset_right = 1049.0
offset_bottom = 487.0
text = "\"Train Archer (Cost: 10 Gold)\""

[node name="StartMissionButton" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 56.0
offset_top = 432.0
offset_right = 253.0
offset_bottom = 504.0
text = "Start Mission"

[node name="sm_player" parent="." instance=ExtResource("2_gfc8j")]
position = Vector2(40, 576)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAACcAAAACAAAAAAAAACgAAAACAAEAAAABACcAAAADAAAAAAABACgAAAADAAEAAAALACgAAAAJAAUAAAACACcAAAAIAAQAAAACACgAAAAIAAUAAAADACcAAAAJAAQAAAADACgAAAAJAAUAAAAEACcAAAAIAAQAAAAEACgAAAAIAAUAAAAFACcAAAAJAAQAAAAFACgAAAAJAAUAAAAGACcAAAAIAAQAAAAGACgAAAAIAAUAAAAHACcAAAAJAAQAAAAHACgAAAAJAAUAAAAIACcAAAAIAAQAAAAIACgAAAAIAAUAAAAJACcAAAAJAAQAAAAJACgAAAAJAAUAAAAKACcAAAAIAAQAAAAKACgAAAAIAAUAAAALACcAAAAJAAQAAAAMACcAAAAIAAQAAAAMACgAAAAIAAUAAAANACcAAAAJAAQAAAANACgAAAAJAAUAAAAOACcAAAAIAAQAAAAOACgAAAAIAAUAAAAPACcAAAAJAAQAAAAPACgAAAAJAAUAAAAQACcAAAAIAAQAAAAQACgAAAAIAAUAAAARACcAAAAJAAQAAAARACgAAAAJAAUAAAASACcAAAAIAAQAAAASACgAAAAIAAUAAAATACcAAAAJAAQAAAATACgAAAAJAAUAAAAUACcAAAAIAAQAAAAUACgAAAAIAAUAAAAVACcAAAAJAAQAAAAVACgAAAAJAAUAAAAWACcAAAAIAAQAAAAWACgAAAAIAAUAAAAXACcAAAAJAAQAAAAXACgAAAAJAAUAAAAYACcAAAAIAAQAAAAYACgAAAAIAAUAAAAZACcAAAAJAAQAAAAZACgAAAAJAAUAAAAaACcAAAAIAAQAAAAaACgAAAAIAAUAAAAbACcAAAAJAAQAAAAbACgAAAAJAAUAAAAcACcAAAAIAAQAAAAcACgAAAAIAAUAAAAdACcAAAAJAAQAAAAdACgAAAAJAAUAAAAeACcAAAAIAAQAAAAeACgAAAAIAAUAAAAfACcAAAAJAAQAAAAfACgAAAAJAAUAAAAgACcAAAAIAAQAAAAgACgAAAAIAAUAAAAhACcAAAAJAAQAAAAhACgAAAAJAAUAAAAiACcAAAAIAAQAAAAiACgAAAAIAAUAAAAjACcAAAAJAAQAAAAjACgAAAAJAAUAAAAkACcAAAAIAAQAAAAkACgAAAAIAAUAAAAlACcAAAAJAAQAAAAlACgAAAAJAAUAAAAmACcAAAAIAAQAAAAmACgAAAAIAAUAAAAnACcAAAAJAAQAAAAnACgAAAAJAAUAAAAoACcAAAAIAAQAAAAoACgAAAAIAAUAAAApACcAAAAJAAQAAAApACgAAAAJAAUAAAAqACcAAAAIAAQAAAAqACgAAAAIAAUAAAArACcAAAAJAAQAAAArACgAAAAJAAUAAAAsACcAAAAIAAQAAAAsACgAAAAIAAUAAAAtACcAAAAJAAQAAAAtACgAAAAJAAUAAAAuACcAAAAIAAQAAAAuACgAAAAIAAUAAAAvACcAAAAJAAQAAAAvACgAAAAJAAUAAAAwACcAAAAIAAQAAAAwACgAAAAIAAUAAAAxACcAAAAJAAQAAAAxACgAAAAJAAUAAAAyACcAAAAIAAQAAAAyACgAAAAIAAUAAAAzACcAAAAJAAQAAAAzACgAAAAJAAUAAAA0ACcAAAAIAAQAAAA0ACgAAAAIAAUAAAA1ACcAAAAJAAQAAAA1ACgAAAAJAAUAAAA2ACcAAAAIAAQAAAA2ACgAAAAIAAUAAAA3ACcAAAAJAAQAAAA3ACgAAAAJAAUAAAA4ACcAAAAIAAQAAAA4ACgAAAAIAAUAAAA5ACcAAAAJAAQAAAA5ACgAAAAJAAUAAAA6ACcAAAAIAAQAAAA6ACgAAAAIAAUAAAA7ACcAAAAJAAQAAAA7ACgAAAAJAAUAAAA8ACcAAAAIAAQAAAA8ACgAAAAIAAUAAAA9ACcAAAAJAAQAAAA9ACgAAAAJAAUAAAA+ACcAAAAIAAQAAAA+ACgAAAAIAAUAAAA/ACcAAAAJAAQAAAA/ACgAAAAJAAUAAABAACcAAAAIAAQAAABAACgAAAAIAAUAAABBACcAAAAJAAQAAABBACgAAAAJAAUAAABCACcAAAAIAAQAAABCACgAAAAIAAUAAABDACcAAAAJAAQAAABDACgAAAAJAAUAAABEACcAAAAEAAQAAABEACgAAAAEAAUAAABFACcAAAAFAAQAAABFACgAAAAFAAUAAABFACYAAAAFAAMAAABFACQAAAAFAAMAAABFACUAAAAFAAIAAABEACIAAAAEAAMAAABFACIAAAAFAAMAAABFACMAAAAFAAIAAABEACAAAAAEAAMAAABEACEAAAAEAAIAAABFACAAAAAFAAMAAABFACEAAAAFAAIAAABEAB4AAAAEAAMAAABEAB8AAAAEAAIAAABFAB4AAAAFAAMAAABFAB8AAAAFAAIAAABEABwAAAAEAAMAAABEAB0AAAAEAAIAAABFABwAAAAFAAMAAABFAB0AAAAFAAIAAABEACUAAAAEAAIAAABEACYAAAAEAAMAAABEACMAAAAEAAIAAABEACQAAAAEAAMAAABEABsAAAAEAAIAAABFABsAAAAFAAIAAAD+/ycAAAAAAAQAAAD+/ygAAAAAAAUAAAD//ycAAAABAAQAAAD//ygAAAABAAUAAAD+/yUAAAAAAAIAAAD+/yYAAAAAAAMAAAD//yUAAAABAAIAAAD//yYAAAABAAMAAAD+/yMAAAAAAAIAAAD+/yQAAAAAAAMAAAD//yMAAAABAAIAAAD//yQAAAABAAMAAAD+/yEAAAAAAAIAAAD+/yIAAAAAAAMAAAD//yEAAAABAAIAAAD//yIAAAABAAMAAAD+/x8AAAAAAAIAAAD+/yAAAAAAAAMAAAD//x8AAAABAAIAAAD//yAAAAABAAMAAAD+/x0AAAAAAAIAAAD+/x4AAAAAAAMAAAD//x0AAAABAAIAAAD//x4AAAABAAMAAAD+/xsAAAAAAAIAAAD+/xwAAAAAAAMAAAD//xsAAAABAAIAAAD//xwAAAABAAMAAAAeACYAAAAOAAQAAAAfACYAAAAPAAQAAAA=")
tile_set = SubResource("TileSet_0vrxt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(520, 344)

[node name="RescuedVillager" parent="." instance=ExtResource("5_pchpa")]
position = Vector2(496, 575)

[node name="DialogueBox" parent="." instance=ExtResource("5_gfc8j")]

[connection signal="pressed" from="GUI/TrainArcherButton" to="GUI" method="_on_train_archer_button_pressed"]
[connection signal="pressed" from="GUI/StartMissionButton" to="GUI" method="_on_start_mission_button_pressed"]
